; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_vector.c_apic_update_irq_cfg.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_vector.c_apic_update_irq_cfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i32)* }
%struct.irq_data = type { i32 }
%struct.apic_chip_data = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@vector_lock = common dso_local global i32 0, align 4
@apic = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*, i32, i32)* @apic_update_irq_cfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apic_update_irq_cfg(%struct.irq_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.irq_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.apic_chip_data*, align 8
  store %struct.irq_data* %0, %struct.irq_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.irq_data*, %struct.irq_data** %4, align 8
  %9 = call %struct.apic_chip_data* @apic_chip_data(%struct.irq_data* %8)
  store %struct.apic_chip_data* %9, %struct.apic_chip_data** %7, align 8
  %10 = call i32 @lockdep_assert_held(i32* @vector_lock)
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.apic_chip_data*, %struct.apic_chip_data** %7, align 8
  %13 = getelementptr inbounds %struct.apic_chip_data, %struct.apic_chip_data* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i32 %11, i32* %14, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @apic, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32 (i32)*, i32 (i32)** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 %17(i32 %18)
  %20 = load %struct.apic_chip_data*, %struct.apic_chip_data** %7, align 8
  %21 = getelementptr inbounds %struct.apic_chip_data, %struct.apic_chip_data* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  store i32 %19, i32* %22, align 4
  %23 = load %struct.irq_data*, %struct.irq_data** %4, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @cpumask_of(i32 %24)
  %26 = call i32 @irq_data_update_effective_affinity(%struct.irq_data* %23, i32 %25)
  %27 = load %struct.irq_data*, %struct.irq_data** %4, align 8
  %28 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load %struct.apic_chip_data*, %struct.apic_chip_data** %7, align 8
  %33 = getelementptr inbounds %struct.apic_chip_data, %struct.apic_chip_data* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @trace_vector_config(i32 %29, i32 %30, i32 %31, i32 %35)
  ret void
}

declare dso_local %struct.apic_chip_data* @apic_chip_data(%struct.irq_data*) #1

declare dso_local i32 @lockdep_assert_held(i32*) #1

declare dso_local i32 @irq_data_update_effective_affinity(%struct.irq_data*, i32) #1

declare dso_local i32 @cpumask_of(i32) #1

declare dso_local i32 @trace_vector_config(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
